GearsetPOC/force-app/main/default/objects/BSP_ADM__c/BSP_ADM__c.object-meta.xml
<CustomObject>
    <label>BSP ADM</label>
    <nameField>
        <displayFormat>ADM-{000000}</displayFormat>
        <label>BSP ADM Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSP ADMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>