GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/ADM_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADM_Amount__c</fullName>
    <label>ADM Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>