GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/ADM_Number__c.field-meta.xml
<CustomField>
    <fullName>ADM_Number__c</fullName>
    <label>ADM Nº</label>
    <type>TextArea</type>
</CustomField>