GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/GDS_Ticket_Number_ADM__c.field-meta.xml
<CustomField>
    <fullName>GDS_Ticket_Number_ADM__c</fullName>
    <label>GDS Ticket Number</label>
    <type>TextArea</type>
</CustomField>