GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/Locator_Reference_ADM__c.field-meta.xml
<CustomField>
    <fullName>Locator_Reference_ADM__c</fullName>
    <label>Locator Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>