GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <length>32</length>
    <type>Text</type>
</CustomField>