GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/Reason_for_ADM__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_ADM__c</fullName>
    <label>Reason for ADM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exchanged by GDS Helpdesk</fullName>
            </value>
            <value>
                <fullName>Agent forgot OD Tax</fullName>
            </value>
            <value>
                <fullName>GDS Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>