GearsetPOC/force-app/main/default/objects/BSP_ADM__c/fields/Related_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BSP ADMs</relationshipLabel>
    <relationshipName>BSP_ADMs</relationshipName>
    <type>Lookup</type>
</CustomField>