GearsetPOC/force-app/main/default/objects/BSP_ADM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GDS_Ticket_Number_ADM__c</columns>
    <columns>Locator_Reference_ADM__c</columns>
    <columns>PNR__c</columns>
    <columns>Related_to_Case__c</columns>
    <columns>ADM_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>